day3/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bggapp-ing
  labels:
    name: bggapp-ing
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - host: bgg-167.172.7.120.nip.io
            path: /v1
            pathType: Prefix
            backend:
              service:
                name: bggappv1-svc
                port:
                  number: 80
          - host: bgg-167.172.7.120.nip.io
            path: /v2
            pathType: Prefix
            backend:
              service:
                name: bggappv2-svc
                port:
                  number: 80
